force-app/main/default/objects/pstar__Employee_Profile__c/pstar__Employee_Profile__c.object-meta.xml
<CustomObject>
    <description>Employee Profile records synced from Credible</description>
    <label>Employee Profile</label>
    <nameField>
        <displayFormat>EP-{0000}</displayFormat>
        <label>Employee Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>