force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_3_hour_CPSL__c.field-meta.xml
<CustomField>
    <fullName>Credible_3_hour_CPSL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credible 3 hour CPSL</label>
    <type>Checkbox</type>
</CustomField>