force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_401k_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Credible_401k_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credible 401k Eligible</label>
    <type>Checkbox</type>
</CustomField>