force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_address1__c.field-meta.xml
<CustomField>
    <fullName>Credible_address1__c</fullName>
    <label>Credible Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>