force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_address2__c.field-meta.xml
<CustomField>
    <fullName>Credible_address2__c</fullName>
    <label>Credible Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>