force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_ANSA_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Credible_ANSA_Expiration_Date__c</fullName>
    <label>Credible ANSA Expiration Date</label>
    <type>Date</type>
</CustomField>