force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_Can_Supervise__c.field-meta.xml
<CustomField>
    <fullName>Credible_Can_Supervise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credible Can Supervise</label>
    <type>Checkbox</type>
</CustomField>