force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_Child_Abuse_Clr_Date__c.field-meta.xml
<CustomField>
    <fullName>Credible_Child_Abuse_Clr_Date__c</fullName>
    <label>Credible Child Abuse Clr Date</label>
    <type>Date</type>
</CustomField>