force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_Child_Abuse_Training__c.field-meta.xml
<CustomField>
    <fullName>Credible_Child_Abuse_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credible Child Abuse Training</label>
    <type>Checkbox</type>
</CustomField>