force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_City__c.field-meta.xml
<CustomField>
    <fullName>Credible_City__c</fullName>
    <label>Credible City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>