force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_Comments__c.field-meta.xml
<CustomField>
    <fullName>Credible_Comments__c</fullName>
    <label>Credible Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>