force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_County__c.field-meta.xml
<CustomField>
    <fullName>Credible_County__c</fullName>
    <label>Credible County</label>
    <length>100</length>
    <type>Text</type>
</CustomField>