force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_CPS_Certificate_Date__c.field-meta.xml
<CustomField>
    <fullName>Credible_CPS_Certificate_Date__c</fullName>
    <label>Credible CPS Certificate Date</label>
    <type>Date</type>
</CustomField>