force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_CPS_CRS_training_hrs_due__c.field-meta.xml
<CustomField>
    <fullName>Credible_CPS_CRS_training_hrs_due__c</fullName>
    <label>Credible CPS CRS training hrs due</label>
    <type>Date</type>
</CustomField>