force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_CPS_PCB_Exp__c.field-meta.xml
<CustomField>
    <fullName>Credible_CPS_PCB_Exp__c</fullName>
    <label>Credible CPS PCB Exp</label>
    <type>Date</type>
</CustomField>