force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_CPSS_Certification_Date__c.field-meta.xml
<CustomField>
    <fullName>Credible_CPSS_Certification_Date__c</fullName>
    <label>Credible CPSS Certification Date</label>
    <type>Date</type>
</CustomField>