force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_Credentials__c.field-meta.xml
<CustomField>
    <fullName>Credible_Credentials__c</fullName>
    <label>Credible Credentials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>