force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_Criminal_EPATCH__c.field-meta.xml
<CustomField>
    <fullName>Credible_Criminal_EPATCH__c</fullName>
    <label>Credible Criminal EPATCH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>