force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_Criminal_History__c.field-meta.xml
<CustomField>
    <fullName>Credible_Criminal_History__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credible Criminal History</label>
    <type>Checkbox</type>
</CustomField>