force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_CRS_Initial_6_Hours_Appro__c.field-meta.xml
<CustomField>
    <fullName>Credible_CRS_Initial_6_Hours_Appro__c</fullName>
    <label>Credible CRS Initial 6 Hours Appro</label>
    <type>Date</type>
</CustomField>