force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_CRS_PCB_Train_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Credible_CRS_PCB_Train_Expiration__c</fullName>
    <label>Credible CRS PCB Train Expiration</label>
    <type>Date</type>
</CustomField>