force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_Date_Full_Time__c.field-meta.xml
<CustomField>
    <fullName>Credible_Date_Full_Time__c</fullName>
    <label>Credible Date Full Time</label>
    <type>Date</type>
</CustomField>