force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_Date_Last_TimeSheet_Appr__c.field-meta.xml
<CustomField>
    <fullName>Credible_Date_Last_TimeSheet_Appr__c</fullName>
    <label>Credible Date Last TimeSheet Appr</label>
    <type>Date</type>
</CustomField>