force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_Date_of_Last_Supervision__c.field-meta.xml
<CustomField>
    <fullName>Credible_Date_of_Last_Supervision__c</fullName>
    <label>Credible Date of Last Supervision</label>
    <type>Date</type>
</CustomField>