force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_Date_Updated__c.field-meta.xml
<CustomField>
    <fullName>Credible_Date_Updated__c</fullName>
    <label>Credible Date Updated</label>
    <type>Date</type>
</CustomField>