force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_DOB__c.field-meta.xml
<CustomField>
    <fullName>Credible_DOB__c</fullName>
    <label>Credible DOB</label>
    <type>Date</type>
</CustomField>