force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_Driver_license_expiration__c.field-meta.xml
<CustomField>
    <fullName>Credible_Driver_license_expiration__c</fullName>
    <label>Credible Driver license expiration</label>
    <type>Date</type>
</CustomField>