force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_Email__c.field-meta.xml
<CustomField>
    <fullName>Credible_Email__c</fullName>
    <label>Credible Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>