force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_Emergency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Credible_Emergency_Contact__c</fullName>
    <label>Credible Emergency Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>