force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_Emergency_Phone__c.field-meta.xml
<CustomField>
    <fullName>Credible_Emergency_Phone__c</fullName>
    <label>Credible Emergency Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>