force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_Employee_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Credible_Employee_First_Name__c</fullName>
    <label>Credible Employee First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>