force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Credible_Employment_Status__c</fullName>
    <label>Credible Employment Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>