force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Credible_External_ID__c</fullName>
    <label>Credible External ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>