force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_FBI_Clearance_Date__c.field-meta.xml
<CustomField>
    <fullName>Credible_FBI_Clearance_Date__c</fullName>
    <label>Credible FBI Clearance Date</label>
    <type>Date</type>
</CustomField>