force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_Gender__c.field-meta.xml
<CustomField>
    <fullName>Credible_Gender__c</fullName>
    <label>Credible Gender</label>
    <length>50</length>
    <type>Text</type>
</CustomField>