force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Credible_Hire_Date__c</fullName>
    <label>Credible Hire Date</label>
    <type>Date</type>
</CustomField>