force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_HR_Packet_Complete__c.field-meta.xml
<CustomField>
    <fullName>Credible_HR_Packet_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credible HR Packet Complete</label>
    <type>Checkbox</type>
</CustomField>