force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_ID__c.field-meta.xml
<CustomField>
    <fullName>Credible_ID__c</fullName>
    <externalId>true</externalId>
    <label>Credible ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>