force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_Initial_PCB_App_sent__c.field-meta.xml
<CustomField>
    <fullName>Credible_Initial_PCB_App_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credible Initial PCB App sent</label>
    <type>Checkbox</type>
</CustomField>