force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_iPad_Returned__c.field-meta.xml
<CustomField>
    <fullName>Credible_iPad_Returned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credible iPad Returned</label>
    <type>Checkbox</type>
</CustomField>