force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_Is_Clinical__c.field-meta.xml
<CustomField>
    <fullName>Credible_Is_Clinical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credible Is Clinical</label>
    <type>Checkbox</type>
</CustomField>