force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_Issued_iPad__c.field-meta.xml
<CustomField>
    <fullName>Credible_Issued_iPad__c</fullName>
    <label>Credible Issued iPad</label>
    <length>100</length>
    <type>Text</type>
</CustomField>