force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_Last_Supervised_By__c.field-meta.xml
<CustomField>
    <fullName>Credible_Last_Supervised_By__c</fullName>
    <label>Credible Last Supervised By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>