force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_LOA_Suspension_Date__c.field-meta.xml
<CustomField>
    <fullName>Credible_LOA_Suspension_Date__c</fullName>
    <label>Credible LOA Suspension Date</label>
    <type>Date</type>
</CustomField>