force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_Main_County_Worked_In__c.field-meta.xml
<CustomField>
    <fullName>Credible_Main_County_Worked_In__c</fullName>
    <label>Credible Main County Worked In</label>
    <length>100</length>
    <type>Text</type>
</CustomField>