force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Credible_Mobile_Phone__c</fullName>
    <label>Credible Mobile Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>