force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_Part_Time__c.field-meta.xml
<CustomField>
    <fullName>Credible_Part_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credible Part Time</label>
    <type>Checkbox</type>
</CustomField>