force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_Previous_Supervision__c.field-meta.xml
<CustomField>
    <fullName>Credible_Previous_Supervision__c</fullName>
    <label>Credible Previous Supervision</label>
    <type>Date</type>
</CustomField>