force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_Profile_Code__c.field-meta.xml
<CustomField>
    <fullName>Credible_Profile_Code__c</fullName>
    <label>Credible Profile Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>