force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_Race__c.field-meta.xml
<CustomField>
    <fullName>Credible_Race__c</fullName>
    <label>Credible Race</label>
    <length>100</length>
    <type>Text</type>
</CustomField>