force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_Regional_Support_Manager__c.field-meta.xml
<CustomField>
    <fullName>Credible_Regional_Support_Manager__c</fullName>
    <label>Credible Regional Support Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>