force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_SSN__c.field-meta.xml
<CustomField>
    <fullName>Credible_SSN__c</fullName>
    <label>Credible SSN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>