force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_State__c.field-meta.xml
<CustomField>
    <fullName>Credible_State__c</fullName>
    <label>Credible State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>