force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_Suicide_Screening_Trnging__c.field-meta.xml
<CustomField>
    <fullName>Credible_Suicide_Screening_Trnging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credible Suicide Screening Trnging</label>
    <type>Checkbox</type>
</CustomField>