force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_Term_Date__c.field-meta.xml
<CustomField>
    <fullName>Credible_Term_Date__c</fullName>
    <label>Credible Term Date</label>
    <type>Date</type>
</CustomField>