force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_Username__c.field-meta.xml
<CustomField>
    <fullName>Credible_Username__c</fullName>
    <label>Credible Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>