force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_Veteran_Status__c.field-meta.xml
<CustomField>
    <fullName>Credible_Veteran_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credible Veteran Status</label>
    <type>Checkbox</type>
</CustomField>