force-app/main/default/objects/pstar__Employee_Profile__c/fields/Credible_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Credible_Zip_Code__c</fullName>
    <label>Credible Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>